# async-native-tls

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: acceptor.rs  connector.rs  handshake.rs  lib.rs  runtime.rs  std_adapter.rs  tls_stream.rs
tests/: bad.rs  google-tokio.rs  google.rs  identity.pfx  private.pem  public.pem  smoke.rs
